Implements first ScalaTest for WikiDataRDD
Prepares WikiImport project for testing with ScalaTest and Spark Testing
Base